--- a/cfg/config_patch_nn.yaml
+++ b/cfg/config_patch_nn.yaml
@@ -8,12 +8,13 @@ defaults:
   - model/patches  : healpatch
   - model/analysis : basic_analysis
   - model/patch_nn : basic_patch_nn
+  - model/beam     : patch_nn_beam
   - override hydra/job_logging: custom_log
   - _self_
 
 # When creating multiple datasets, using interpolation like this may be easier:
 # dataset_name       : ${scenario.map_fields}_${scenario.nside}_${splits.name}
-dataset_name       : I_512_1450
+dataset_name       : CMB-ML_512_1450
 working_dir        : "PatchNN_${model.patch_nn.scaling}_test/"
 fig_model_name     : PatchNN
 hydra:
@@ -31,11 +32,11 @@ detectors          : [30, 44, 70, 100, 143, 217, 353, 545, 857]
 map_fields         : "I"
 
 # In the model yaml
-num_epochs         : 100
+num_epochs         : 10
 
 # In the pipeline yamls
 # For prediction, postprocessing, power spectra generation:
-use_epochs           : [100] #, 60, 80, 100, 120]
+use_epochs           : [10] #, 60, 80, 100, 120]
 # use_epochs           : [30, 50] #, 60, 80, 100, 120]
 # For single simulation figures (maps & ps figures):
 use_epochs_imgs      : ${use_epochs}
